--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -206,7 +206,7 @@ and the \structe{Region of Convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l             D     l              @{\hspace{2pt}}l                                  C                       D}
     \mc{3}{H}{Mapping}                                  & \mc{3}{|H}{Region of Convergence}                                    & \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
   \\\hline%                         & &                 &                                   &                                  &                       &
-    \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s) & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D} & \forall x,\alpha\in\C & (\prope{additive})
+    \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s) & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D} & \forall x       \in\C & (\prope{additive})
   \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)    & for & \Real(s)                    & \in\intcc{A}{B}                  & \forall x,\alpha\in\C & (\prope{homogeneous})
 \end{array}}
 \end{theorem}
