--- a/common/transop.tex
+++ b/common/transop.tex
@@ -171,6 +171,9 @@ But in some cases the inverse of an operator is itself an operator.
 The inverses of the operators $\opTrn$ and $\opDil$ both exist as operators,
 as demonstrated next.
 
+%=======================================
+\section{Operator properties}
+%=======================================
 %---------------------------------------
 \begin{proposition}[\thmd{transversal operator inverses}]
 \label{prop:opTi}
@@ -241,7 +244,7 @@ Let $\opDil^0=\opTrn^0\eqd\opI$ be the \ope{identity operator}.
 %\end{proof}
 
 %=======================================
-\section{Linear space properties}
+\section{Linear operator properties}
 %=======================================
 
 %20171225%\ifdochasnot{sums}{
@@ -312,6 +315,18 @@ Let $\opDil^0=\opTrn^0\eqd\opI$ be the \ope{identity operator}.
 %\end{align*}
 %\end{proof}
 
+
+%--------------------------------------
+\begin{theorem}
+\label{thm:opTD_linear}
+%--------------------------------------
+\thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                    C                        D}
+    \mc{3}{H}{Mapping}                                                          &  \mc{1}{|H}{Domain}    & \mc{1}{|H}{Property}
+  \\\hline%                         & &                                         &                        &
+    \opTrn\brs{\ff(x)+\fg(x)}       &=& \brs{\opTrn\ff(x)} + \brs{\opTrn\fg(x)} &  \forall x       \in\C & (\prope{additive})
+  \\\opTrn\brs{\alpha\fg(x)}        &=& \alpha\opTrn\fg(x)                      &  \forall x,\alpha\in\C & (\prope{homogeneous})
+\end{array}}
+\end{theorem}
 
 %--------------------------------------
 \begin{proposition}
