--- a/common/distorted_frequency.tex
+++ b/common/distorted_frequency.tex
@@ -344,39 +344,39 @@ analog (\prefp{sec:whiten}) or digitally (\prefp{sec:d-whiten}).
 \begin{theorem}
 %--------------------------------------
 \thmbox{\begin{array}{rcl}
-   \E{\fdotn_n}               &=&    \ds 0                                           \\
+   \emE{\fdotn_n}               &=&    \ds 0                                           \\
    \cov{\fdotn_n}{\fdotn_m}   &=&    \ds N_o \Rhh(n-m)                               \\
-   \E\fdotr_n|\va             &=&    \ds \sum_m a_{n-m} \Rhh(m)                      \\
+   \emE\fdotr_n|\va             &=&    \ds \sum_m a_{n-m} \Rhh(m)                      \\
    \fdotr_n|\va               &\sim& \ds \pN{\sum_m a_{n-m} \Rhh(m)}{N_o \Rhh(0)} \\
    \cov{\fdotr_n|\va }{\fdotr_m|\va } &=& N_o \Rhh(n-m)
 \end{array}}
 \end{theorem}
 \begin{proof}
 \begin{align*}
-   \E{\fdotn_n}
-     &=    \E \inprod{n(t)}{\fh(t-nT}
-   \\&=    \inprod{\E n(t)}{\fh(t-nT}
+   \emE{\fdotn_n}
+     &=    \emE \inprod{n(t)}{\fh(t-nT}
+   \\&=    \inprod{\emE n(t)}{\fh(t-nT}
    \\&=    \inprod{0}{\fh(t-nT}
    \\&=    0
    \\
    \\
    \cov{\fdotn_n}{\fdotn_m}
-     &= \Eb{\fdotn_n \fdotn_m} - \Eb{\fdotn_n}\Eb{\fdotn_m}
-   \\&= \Eb{\fdotn_n \fdotn_m} - 0\cdot0
-   \\&= \Eb{\inprod{n(t)}{\fh(t-nT)} \inprod{n(t)}{\fh(t-mT)}}
-   \\&= \Eb{\inprod{n(t)}{\fh(t-nT)} \inprod{n(u)}{\fh(u-mT)}}
-   \\&= \Eb{\inprod{n(t)\inprod{n(u)}{\fh(u-mT)}}{\fh(t-nT)} }
-   \\&= \Eb{\inprod{\inprod{n(t)n(u)}{\fh(u-mT)}}{\fh(t-nT)} }
-   \\&= \inprod{\inprod{\Eb{n(t)n(u)}}{\fh(u-mT)}}{\fh(t-nT)}
+     &= \emE\brs{\fdotn_n \fdotn_m} - \emE\brs{\fdotn_n}\emE\brs{\fdotn_m}
+   \\&= \emE\brs{\fdotn_n \fdotn_m} - 0\cdot0
+   \\&= \emE\brs{\inprod{n(t)}{\fh(t-nT)} \inprod{n(t)}{\fh(t-mT)}}
+   \\&= \emE\brs{\inprod{n(t)}{\fh(t-nT)} \inprod{n(u)}{\fh(u-mT)}}
+   \\&= \emE\brs{\inprod{n(t)\inprod{n(u)}{\fh(u-mT)}}{\fh(t-nT)} }
+   \\&= \emE\brs{\inprod{\inprod{n(t)n(u)}{\fh(u-mT)}}{\fh(t-nT)} }
+   \\&= \inprod{\inprod{\emE\brs{n(t)n(u)}}{\fh(u-mT)}}{\fh(t-nT)}
    \\&= \inprod{\inprod{N_o\delta(t-u)}{\fh(u-mT)}}{\fh(t-nT)}
    \\&= N_o \inprod{\fh(t-mT)}{\fh(t-nT)}
    \\&= N_o \Rhh(n-m)
    \\
    \\
-   \E\fdotr_n
-     &\eqd \E\inprod{r(t)}{\fh(t-nT)}
-   \\&=    \E\inprod{\sum_k a_k \fh(t-kT) + n(t)}{\fh(t-nT)}
-   \\&=    \inprod{\sum_k a_k \fh(t-kT) + \E n(t)}{\fh(t-nT)}
+   \emE\fdotr_n
+     &\eqd \emE\inprod{r(t)}{\fh(t-nT)}
+   \\&=    \emE\inprod{\sum_k a_k \fh(t-kT) + n(t)}{\fh(t-nT)}
+   \\&=    \inprod{\sum_k a_k \fh(t-kT) + \emE n(t)}{\fh(t-nT)}
    \\&=    \inprod{\sum_k a_k \fh(t-kT) + 0}{\fh(t-nT)}
    \\&=    \sum_k a_k \inprod{\fh(t-kT)}{\fh(t-nT)}
    \\&=    \sum_k a_k \Rhh(n-k)
@@ -385,8 +385,8 @@ analog (\prefp{sec:whiten}) or digitally (\prefp{sec:d-whiten}).
    \\
    \\
    \cov{\fdotr_n}{\fdotr_m}
-     &= \Eb{\left(\fdotr_n-\E{\fdotr_n}\right)\left(\fdotr_m-\E{\fdotr_m}\right)}
-   \\&= \Eb{\fdotn_n \fdotn_m }
+     &= \emE\brs{\left(\fdotr_n-\emE{\fdotr_n}\right)\left(\fdotr_m-\emE{\fdotr_m}\right)}
+   \\&= \emE\brs{\fdotn_n \fdotn_m }
    \\&= \cov{\fdotn_n}{\fdotn_m}
    \\&= N_o \Rhh(n-m)
 \end{align*}
@@ -746,19 +746,19 @@ Let
 \begin{eqnarray*}
    \hat{\va}(\vp)   &\eqd& U^H\vp    \\
    \ve(\vp)    &\eqd& \hat{\va}-\va \\
-   \fCost(\vp) &\eqd& \E\norm{\ve}^2 \eqd \Eb{\ve^T\ve} \\
+   \fCost(\vp) &\eqd& \emE\norm{\ve}^2 \eqd \emE\brs{\ve^T\ve} \\
    \estMS      &\eqd& \arg\min_\vp \fCost(\vp)  \\
-   R           &\eqd& \Eb{UU^H} \\
-   W           &\eqd& \Eb{ U\vy}.
+   R           &\eqd& \emE\brs{UU^H} \\
+   W           &\eqd& \emE\brs{ U\vy}.
 \end{eqnarray*}
 
 Then
 \begin{eqnarray*}
-   \fCost(\vp)           &=& \vp^H R \vp - (W^H\vp)^\ast -W^H\vp + \Eb{\va^H\va} \\
+   \fCost(\vp)           &=& \vp^H R \vp - (W^H\vp)^\ast -W^H\vp + \emE\brs{\va^H\va} \\
    \grad_\vp \fCost(\vp) &=& 2\Reb{R}\vp - 2\Re{W}  \\
    \estMS                  &=& (\Re{R})^{-1}(\Re{W})  \\
-   \fCost(\estMS)        &=&    (\Re{W^H})(\Re{R})^{-1} R (\Re{R})^{-1}(\Re{W}) - 2(\Re{W^H})(\Re{R})^{-1}(\Re{W}) + \Eb{\va^H\va} \\
-   \fCost(\estMS)|_{R\mbox{ real}} &=&    \Eb{\va^H\va} - (\Re{W^H})R^{-1}(\Re{W}).
+   \fCost(\estMS)        &=&    (\Re{W^H})(\Re{R})^{-1} R (\Re{R})^{-1}(\Re{W}) - 2(\Re{W^H})(\Re{R})^{-1}(\Re{W}) + \emE\brs{\va^H\va} \\
+   \fCost(\estMS)|_{R\mbox{ real}} &=&    \emE\brs{\va^H\va} - (\Re{W^H})R^{-1}(\Re{W}).
 \end{eqnarray*}
 
 
