--- a/common/estimate_phase.tex
+++ b/common/estimate_phase.tex
@@ -372,7 +372,7 @@ The PLL operates in accordance with the equation
 %--------------------------------------
 \begin{definition}
 %--------------------------------------
-\[ \E_m \estML[\phi] = \arg\max_{\phi} \E_m \int_t r(t)s_m(t;\phi) \dt. \]
+\[ \emE_m \estML[\phi] = \arg\max_{\phi} \emE_m \int_t r(t)s_m(t;\phi) \dt. \]
 \end{definition}
 
 
