--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -126,7 +126,7 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
 \label{cor:pE_linop}
 %---------------------------------------
 Let $\pE$ be the \ope{expectation operator} over a \structe{probability space} $\ps$.
-Let $spLLF$ be a \structe{vector space of random variables} over $\ps$.
+Let $\spLLF$ be a \structe{vector space of random variables} over $\ps$.
 \corbox{
   \begin{array}{F>{\ds}lc>{\ds}lCD|}
       (1). & \pE\vzero    &=& \vzero               &                            & and
@@ -142,8 +142,8 @@ Let $spLLF$ be a \structe{vector space of random variables} over $\ps$.
   }
 \end{corollary}
 \begin{proof}
-These all follow immediately from the fact that $\pE$ is a \ope{linear operator} 
-and from \prefpp{thm:L_prop}.
+These all follow immediately from the fact that $\pE$ is a \ope{linear operator} \xref{thm:pE_linop}
+and from properties of all linear operators \xref{thm:L_prop}.
 \end{proof}
 
 %---------------------------------------
