--- a/common/modulation_coding.tex
+++ b/common/modulation_coding.tex
@@ -345,7 +345,7 @@ Let
          \[ \psp\{u_n=0\}=\psp\{u_n=1\}= \frac{1}{2} \hspace{1cm}\mbox{for all $n$}\]
    \item $s(t)$ be the waveform NRZ modulated by $u_n$
    \item $\Rss(t+\tau,t)$ be the autocorrelation of $s(t)$ such that
-         \[ \Rss(t+\tau,t) \eqd \Eb{s(t+\tau)s(t)}\]
+         \[ \Rss(t+\tau,t) \eqd \pE\brs{s(t+\tau)s(t)}\]
    \item $\avgRss(\tau)$ be the time average of $\Rss(t+\tau,t)$.
          \[ \avgRss(\tau) \eqd \frac{1}{T}\int_0^T \Rss(t+\tau,t) \dt \]
    \item $\avgSss(f)$ be the Fourier transform of $\avgRss(\tau)$ such that
@@ -382,7 +382,7 @@ identical portions of $s(t+\tau)$ and $s(t)$
 overlap and the resulting autocorrelation is
 \begin{eqnarray*}
    \Rss(t+\tau,t) 
-     &=& \Eb{s(t+\tau)s(t)} 
+     &=& \pE\brs{s(t+\tau)s(t)} 
    \\&=& (-A)(-A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + 
          (-A)(+A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + \\&&
          (+A)(-A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + 
@@ -396,12 +396,12 @@ overlap and the resulting autocorrelation is
 
 For all other time intervals, especially $|\tau|>T$,
 $s(t+\tau)$ and $s(t)$ are statistically independent and hence
- \[ \Rss(\tau) = \Eb{s(t+\tau)s(t)} = \Eb{s(t+\tau)}\Eb{s(t)} = 0\cdot0 = 0.\]
+ \[ \Rss(\tau) = \pE\brs{s(t+\tau)s(t)} = \pE\brs{s(t+\tau)}\pE\brs{s(t)} = 0\cdot0 = 0.\]
 
 Alternatively,
 \begin{eqnarray*}
    \Rss(t+\tau,t) 
-     &=& \Eb{s(t+\tau)s(t)} 
+     &=& \pE\brs{s(t+\tau)s(t)} 
    \\&=& (-A)(-A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + 
          (-A)(+A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + \\&&
          (+A)(-A)\pP{[s(t+\tau)=-A]\land [s(t)=-A]} + 
@@ -619,7 +619,7 @@ The probability of detection error in an NRZ modulation system
    \\&=& \pP{\dot{r}>0 | s_0(t) \mbox{ sent }}\pP{s_0(t) \mbox{ sent } } +
          \pP{\dot{r}<0 | s_1(t) \mbox{ sent }}\pP{s_1(t) \mbox{ sent } } 
    \\&=& 2\pP{\dot{r}>0 | s_0(t) \mbox{ sent }}\frac{1}{2}
-   \\&=& \Qb{ \frac{\E\dot{r}}{\sqrt{\var{\dot{r}}}}}
+   \\&=& \Qb{ \frac{\emE\dot{r}}{\sqrt{\var{\dot{r}}}}}
    \\&=& \Qb{\frac{a}{N_o}}
 \end{eqnarray*}
 \end{proof}
@@ -952,7 +952,7 @@ Let
    \item $d(t)$ be the deterministic periodic waveform illustrated in 
          Figure~\ref{fig:RZ_decomp}
    \item $\Rss(t+\tau,t)$ be the autocorrelation of $s(t)$ such that
-         \[ \Rss(t+\tau,t) \eqd \Eb{s(t+\tau)s(t)}\]
+         \[ \Rss(t+\tau,t) \eqd \pE\brs{s(t+\tau)s(t)}\]
    \item $\avgRss(\tau)$ be the time average of $\Rss(t+\tau,t)$.
          \[ \avgRss(\tau) \eqd \frac{1}{T}\int_0^T \Rss(t+\tau,t) \dt \]
    \item $\avgSss(f)$ be the Fourier transform of $\avgRss(\tau)$ such that
@@ -988,10 +988,10 @@ Then
 \begin{proof}
 \begin{eqnarray*}
    \Rss(t+\tau,t) 
-     &=& \Eb{s(t+\tau)s(t)} 
-   \\&=& \Eb{[d(t+\tau)r(t+\tau)][d(t)+r(t)]} 
-   \\&=& \Eb{d(t+\tau)d(t) + d(t+\tau)r(t) + r(t+\tau)d(t)+ r(t+\tau)r(t)} 
-   \\&=& d(t+\tau)d(t) + d(t+\tau)\Eb{r(t)} + d(t)\Eb{r(t+\tau)}+ \Eb{r(t+\tau)r(t)} 
+     &=& \pE\brs{s(t+\tau)s(t)} 
+   \\&=& \pE\brs{[d(t+\tau)r(t+\tau)][d(t)+r(t)]} 
+   \\&=& \pE\brs{d(t+\tau)d(t) + d(t+\tau)r(t) + r(t+\tau)d(t)+ r(t+\tau)r(t)} 
+   \\&=& d(t+\tau)d(t) + d(t+\tau)\pE\brs{r(t)} + d(t)\pE\brs{r(t+\tau)}+ \pE\brs{r(t+\tau)r(t)} 
    \\&=& \Rxx[rr](t+\tau,t) + d(t+\tau)d(t) + d(t+\tau)\cdot0 + d(t)\cdot0 
    \\&=& \Rxx[rr](t+\tau,t) + d(t+\tau)d(t) 
 \end{eqnarray*}
@@ -1014,7 +1014,7 @@ overlap and the resulting autocorrelation is
 
 For all other time intervals, especially $|\tau|>T$,
 $r(t+\tau)$ and $r(t)$ are statistically independent and hence
- \[ \Rxx[rr](\tau) = \Eb{r(t+\tau)r(t)} = \Eb{r(t+\tau)}\Eb{r(t)} = 0\cdot0 = 0.\]
+ \[ \Rxx[rr](\tau) = \pE\brs{r(t+\tau)r(t)} = \pE\brs{r(t+\tau)}\pE\brs{r(t)} = 0\cdot0 = 0.\]
 
 %For the transform needed to compute $\avgSss(f)$, 
 %see Theorem~\ref{thm:ft_pairs} page~\pageref{thm:ft_pairs}.
@@ -1192,7 +1192,7 @@ Let
          \[ \psp\{u_n=0\}=\psp\{u_n=1\}= \frac{1}{2} \hspace{1cm}\mbox{for all $n$}\]
    \item $s(t)$ be the waveform Manchester modulated by $u_n$
    \item $\Rss(t+\tau,t)$ be the autocorrelation of $s(t)$ such that
-         \[ \Rss(t+\tau,t) \eqd \Eb{s(t+\tau)s(t)}\]
+         \[ \Rss(t+\tau,t) \eqd \pE\brs{s(t+\tau)s(t)}\]
    \item $\avgRss(\tau)$ be the time average of $\Rss(t+\tau,t)$.
          \[ \avgRss(\tau) \eqd \frac{1}{T}\int_0^T \Rss(t+\tau,t) \dt \]
    \item $\avgSss(f)$ be the Fourier transform of $\avgRss(\tau)$ such that
