--- a/common/narrowband.tex
+++ b/common/narrowband.tex
@@ -668,12 +668,12 @@ such that
 \begin{eqnarray*}
   n(t) &=& \fp(t)\cos(2\pi f_ct) - \fq(t) \sin(2\pi f_c t) \\
        &=& \Reb{\fz(t)e^{i2\pi f_ct}} \\
-  \Rxy(\tau) &\eqd& \Eb{\fx(t+\tau)\fy^\ast(t)}.
+  \Rxy(\tau) &\eqd& \pE\brs{\fx(t+\tau)\fy^\ast(t)}.
 \end{eqnarray*}
 Then (see \prefpp{fig:Rpq})
 \thmbox{
 \begin{array}{llD}
-   1. & \Eb{p(t)} = \Eb{q(t)} = 0                                        & (component means are zero                 ) \\
+   1. & \pE\brs{p(t)} = \pE\brs{q(t)} = 0                                        & (component means are zero                 ) \\
    2. & \Rpp(\tau)=\Rqq(\tau)                                            & (autocorrelations are equal               ) \\
    3. & \Rpq(\tau)=-\Rqp(\tau)                                           & (crosscorrelations are additive inverses  ) \\
    4. & \Rpp(\tau)=\Rpp(-\tau)                                           & (autocorrelations are symmetric           ) \\
@@ -686,28 +686,28 @@ Then (see \prefpp{fig:Rpq})
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
-   0 &=& \Eb{n(t)}
-   \\&=& \Eb{p(t)\cos(2\pi f_ct) - q(t)\sin(2\pi f_c t)}
-   \\&=& \Eb{p(t)\cos(2\pi f_ct)} - \Eb{q(t)\sin(2\pi f_c t)}
-   \\&=& \Eb{p(t)}\cos(2\pi f_ct) - \Eb{q(t)}\sin(2\pi f_c t)
+   0 &=& \pE\brs{n(t)}
+   \\&=& \pE\brs{p(t)\cos(2\pi f_ct) - q(t)\sin(2\pi f_c t)}
+   \\&=& \pE\brs{p(t)\cos(2\pi f_ct)} - \pE\brs{q(t)\sin(2\pi f_c t)}
+   \\&=& \pE\brs{p(t)}\cos(2\pi f_ct) - \pE\brs{q(t)}\sin(2\pi f_c t)
 \end{eqnarray*}
 
 \begin{eqnarray*}
    \Rxx[nn](\tau)
-     &=& \Eb{n(t+\tau)n(t)}
-   \\&=& \Eb{
+     &=& \pE\brs{n(t+\tau)n(t)}
+   \\&=& \pE\brs{
          \left( p(t+\tau)\cos(2\pi f_ct + 2\pi f_c\tau) - q(t) \sin(2\pi f_ct + 2\pi f_c\tau)  \right)
          \left( p(t     )\cos(2\pi f_ct               ) - q(t) \sin(2\pi f_ct               )  \right)
          }
-   \\&=& \Eb{ p(t+\tau)p(t) \cos(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
-        -\Eb{ p(t+\tau)q(t) \cos(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
-   \\&& -\Eb{ q(t+\tau)p(t) \sin(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
-        +\Eb{ q(t+\tau)q(t) \sin(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
+   \\&=& \pE\brs{ p(t+\tau)p(t) \cos(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
+        -\pE\brs{ p(t+\tau)q(t) \cos(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
+   \\&& -\pE\brs{ q(t+\tau)p(t) \sin(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
+        +\pE\brs{ q(t+\tau)q(t) \sin(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
 %
-   \\&=& \Rpp(\tau) \Eb{ \cos(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
-        -\Rpq(\tau) \Eb{ \cos(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
-   \\&& -\Rqp(\tau) \Eb{ \sin(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
-        +\Rqq(\tau) \Eb{ \sin(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
+   \\&=& \Rpp(\tau) \pE\brs{ \cos(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
+        -\Rpq(\tau) \pE\brs{ \cos(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
+   \\&& -\Rqp(\tau) \pE\brs{ \sin(2\pi f_ct + 2\pi f_c\tau) \cos(2\pi f_ct) }
+        +\Rqq(\tau) \pE\brs{ \sin(2\pi f_ct + 2\pi f_c\tau) \sin(2\pi f_ct) }
 %
    \\&=& \frac{1}{2} \Rpp(\tau) \left[ \cos(2\pi f_c\tau) + \cos(4\pi f_ct + 2\pi f_c\tau) \right]
         -\frac{1}{2} \Rpq(\tau) \left[-\sin(2\pi f_c\tau) + \sin(4\pi f_ct + 2\pi f_c\tau) \right]
@@ -742,8 +742,8 @@ From these we have
 \begin{align*}
    \Rpq(\tau)
      &=      -\Rqp(\tau)
-   \\&\eqd -\Eb{q(t+\tau) p(t)}
-   \\&=       \Eb{p(t) q(t+\tau)}
+   \\&\eqd -\pE\brs{q(t+\tau) p(t)}
+   \\&=       \pE\brs{p(t) q(t+\tau)}
    \\&\eqd -\Rpq(-\tau)
 \end{align*}
 
@@ -758,14 +758,14 @@ $\Rpq(\tau)$ is odd-symmetric. \\
 
 \begin{eqnarray*}
    \Rzz(\tau)
-     &\eqd& \Eb{z(t+\tau)z^\ast(t)}
-   \\&=&      \Eb{\left( x(t+\tau) + iy(t+\tau)\right)\left( x(t) + iy(t)\right)^\ast}
-   \\&=&      \Eb{\left( x(t+\tau) + iy(t+\tau)\right)\left( x^\ast(t) - iy^\ast(t)\right)}
+     &\eqd& \pE\brs{z(t+\tau)z^\ast(t)}
+   \\&=&      \pE\brs{\left( x(t+\tau) + iy(t+\tau)\right)\left( x(t) + iy(t)\right)^\ast}
+   \\&=&      \pE\brs{\left( x(t+\tau) + iy(t+\tau)\right)\left( x^\ast(t) - iy^\ast(t)\right)}
 %
-   \\&=&      \Eb{ x(t+\tau)x^\ast(t) }
-       -     i\Eb{ x(t+\tau)y^\ast(t) }
-       +     i\Eb{ y(t+\tau)x^\ast(t) }
-       +      \Eb{ y(t+\tau)y^\ast(t) }
+   \\&=&      \pE\brs{ x(t+\tau)x^\ast(t) }
+       -     i\pE\brs{ x(t+\tau)y^\ast(t) }
+       +     i\pE\brs{ y(t+\tau)x^\ast(t) }
+       +      \pE\brs{ y(t+\tau)y^\ast(t) }
 %
    \\&\eqd& \Rpp(\tau) - i\Rpq(\tau) + i\Rqp(\tau) + \Rqq(\tau)
    \\&=&      \Rpp(\tau) - i\Rpq(\tau) - i\Rpq(\tau) + \Rqq(\tau)
