--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -293,7 +293,7 @@ In this special case, we have the following results
 \\\indentx$\begin{array}{rcl@{\qquad\qquad}rcl}
       \hat{y}(\vtheta) &\eqd& \vx^T \vtheta                    & R                               &\eqd& \pE\brs{\vx\vx^T}                                    
     \\ e(\vtheta)      &\eqd& \hat{y}-y                        & W                               &\eqd& \pE\brs{ \vx y }                                     
-    \\ \fCost(\vtheta) &\eqd& \E\norm{\ve}^2 \eqd \pE\brs{e^2} & \fCost(\vtheta)                 &=&    \vtheta^T R \vtheta -2W^T\vtheta  + \pE\brs{\vy^T\vy}
+    \\ \fCost(\vtheta) &\eqd& \pE\norm{\ve}^2 \eqd \pE\brs{e^2} & \fCost(\vtheta)                 &=&    \vtheta^T R \vtheta -2W^T\vtheta  + \pE\brs{\vy^T\vy}
     \\ \estMS          &\eqd& \argmin_\vtheta \fCost(\vtheta)  & \grad_\vtheta \fCost(\vtheta)   &=&     2R\vtheta - 2W                                      
     \\                 &    &                                  & \fCost(\estMS)|_{R\mbox{ real}} &=&     \pE{\vy^T\vy} - W^T R^{-1}W                         
 \end{array}$
@@ -885,7 +885,7 @@ This is a special case of \hie{steepest descent}.
 In minimum mean square estimation \xref{sec:est_mms},
 the cost function $\fCost(\vtheta)$ is defined as a
 \hie{statistical average} of the error vector such that
-$\fCost(\vtheta) = \Eb{\ve^H\ve}$.
+$\fCost(\vtheta) = \pE\brs{\ve^H\ve}$.
 In this case the gradient $\grad\fCost$ is difficult to compute.
 However, the LMS algorithm greatly simplifies the problem by
 instead defining the cost function as a function of the
