--- a/common/randseq_continuous_dsp.tex
+++ b/common/randseq_continuous_dsp.tex
@@ -70,27 +70,27 @@ Then
 \begin{proof}
 \begin{eqnarray*}
    \Rxy(t,u)
-     &\eqd& \E\brs{\rvx(t) \rvy^\ast(u) }
-   \\&=&    \E\brs{\rvx(t) \brp{ \int_v \fh(v) \rvx(u-v)  \dv }^\ast }
-   \\&=&    \E\brs{\rvx(t) \int_v \fh^\ast(v) \rvx^\ast(u-v)  \dv }
-   \\&=&    \int_v \fh^\ast(v)  \E\brs{\rvx(t)\rvx^\ast(u-v)} \dv
+     &\eqd& \pE\brs{\rvx(t) \rvy^\ast(u) }
+   \\&=&    \pE\brs{\rvx(t) \brp{ \int_v \fh(v) \rvx(u-v)  \dv }^\ast }
+   \\&=&    \pE\brs{\rvx(t) \int_v \fh^\ast(v) \rvx^\ast(u-v)  \dv }
+   \\&=&    \int_v \fh^\ast(v)  \pE\brs{\rvx(t)\rvx^\ast(u-v)} \dv
    \\&=&    \int_v \fh^\ast(v)  \Rxx(t,u-v)  \dv
    \\&\eqd& \Rxx(t,u) \conv h^\ast(u)
 \\ \\
    \Ryy(t,u)
-     &\eqd& \E\brs{\rvy(t) \rvy^\ast(u) }
-   \\&=&    \E\brs{\brp{\int_v \fh(v) \fx(t-v)\dv}  \rvy^\ast(u) }
-   \\&=&    \int_v \fh(v) \E\brs{\fx(t-v)\rvy^\ast(u)} \dv
+     &\eqd& \pE\brs{\rvy(t) \rvy^\ast(u) }
+   \\&=&    \pE\brs{\brp{\int_v \fh(v) \fx(t-v)\dv}  \rvy^\ast(u) }
+   \\&=&    \int_v \fh(v) \pE\brs{\fx(t-v)\rvy^\ast(u)} \dv
    \\&=&    \int_v \fh(v) \Rxy(t-v,u) \dv
    \\&\eqd& \Rxy(t,u) \conv \fh(t)
 \\ \\
    \Ryy(t,u)
-     &\eqd& \E\brs{\rvy(t) \rvy^\ast(u) }
-   \\&=&    \E\brs{\brp{\int_v \fh(v) \fx(t-v)\dv}
+     &\eqd& \pE\brs{\rvy(t) \rvy^\ast(u) }
+   \\&=&    \pE\brs{\brp{\int_v \fh(v) \fx(t-v)\dv}
                     \brp{\int_w \fh(w) \fx(u-w)\dw}^\ast
               }
    \\&=&    \int_w \fh^\ast(w) \int_v \fh(v)
-                   \E\brs{\fx(t-v)\fx^\ast(u-w)} \dv\dw
+                   \pE\brs{\fx(t-v)\fx^\ast(u-w)} \dv\dw
    \\&=&    \int_w \fh^\ast(w) \int_v \fh(v)
                    \Rxx(t-v,u-w) \dv\dw
    \\&=&    \int_w \fh^\ast(w) \brs{\Rxx(t,u-w)\conv\fh(t)}\dw
@@ -386,19 +386,19 @@ Then
 \begin{align*}
    \Rxx(\tau) \conv h^\ast(-\tau)
      &\eqd \int_{u\in\R}h^\ast(-u) \Rxx(\tau-u)\du
-   \\&=    \int_{u\in\R}h^\ast(-u) \E\brs{\rvx(t) \rvx^\ast(t-\tau+u) } \du
-   \\&=    \E\brs{\rvx(t) \int_{u\in\R}h^\ast(-u)  \rvx^\ast(t-\tau+u) \du   }
-   \\&=    \E\brs{\rvx(t) \int_{u\in\R}h^\ast(u^\prime)  \rvx^\ast(t-\tau-u^\prime) \du^\prime   }
-   \\&=    \E\brs{\rvx(t) \rvy^\ast(t-\tau)  }
+   \\&=    \int_{u\in\R}h^\ast(-u) \pE\brs{\rvx(t) \rvx^\ast(t-\tau+u) } \du
+   \\&=    \pE\brs{\rvx(t) \int_{u\in\R}h^\ast(-u)  \rvx^\ast(t-\tau+u) \du   }
+   \\&=    \pE\brs{\rvx(t) \int_{u\in\R}h^\ast(u^\prime)  \rvx^\ast(t-\tau-u^\prime) \du^\prime   }
+   \\&=    \pE\brs{\rvx(t) \rvy^\ast(t-\tau)  }
    \\&\eqd \Rxy(\tau)
 \\
 \\
    \Rxy(\tau) \conv h(\tau)
      &\eqd \int_{u\in\R}h(u) \Rxy(\tau-u)\du
-   \\&=    \int_{u\in\R}h(u) \E\brs{\rvx(t+\tau-u) \rvy^\ast(t) } \du
-   \\&=    \E\brs{\rvy^\ast(t) \int_{u\in\R}h(u) \rvx(t+\tau-u)  \du }
-   \\&=    \E\brs{\rvy^\ast(t) \rvy(t+\tau) }
-   \\&=    \E\brs{ \rvy(t+\tau) \rvy^\ast(t)}
+   \\&=    \int_{u\in\R}h(u) \pE\brs{\rvx(t+\tau-u) \rvy^\ast(t) } \du
+   \\&=    \pE\brs{\rvy^\ast(t) \int_{u\in\R}h(u) \rvx(t+\tau-u)  \du }
+   \\&=    \pE\brs{\rvy^\ast(t) \rvy(t+\tau) }
+   \\&=    \pE\brs{ \rvy(t+\tau) \rvy^\ast(t)}
    \\&\eqd \Ryy(\tau)
 \\
 \\
