--- a/common/src.tex
+++ b/common/src.tex
@@ -19,7 +19,7 @@
 %  }
 \label{thm:upsample}
 %---------------------------------------
-Let $\seqxZ{x_n}$ and $\seqxZ{y_n}$ be \structe{sequences} \xref{def:seq} 
+Let $\seqxZ{x_n}$ and $\seqxZ{y_n}$ be \structe{sequences} \ifxref{seq}{def:seq} 
 in $\spllF$ \xref{def:spllF} over a \structe{field} $\F$.
 \thmbox{
   y_n = 
