--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1668,9 +1668,10 @@
  \newcommand{\pvary} [0]   {{\pvarx[Y]}}
  \newcommand{\pvarxy}[0]   {{\sigma_{\mathsfup{xy}}}}
  \newcommand{\pQ}[0]       {{\mathfnct{Q}}}  % expected value
- \newcommand{\pE}{\mathfnct{{E}}}% expectation operator
- \newcommand{\Eb}   [1] {\pE\left[#1\right]}   % DEPRECATED!!!!
- \newcommand{\E}    [0] {\pE} % DEPRECATED!!!!
+ \newcommand{\pE}  {\opXYZ {E}} % expectation operator
+ %\newcommand{\pE}{\mathfnct{{E}}}% expectation operator
+ %\newcommand{\Eb}   [1] {\pE\left[#1\right]}   % DEPRECATED!!!!
+ %\newcommand{\E}    [0] {\pE} % DEPRECATED!!!!
  \newcommand{\pEb}[1]   {\pE\left[#1\right]}   % DEPRECATED!!!!
  \newcommand{\pEx}[1][x]{\pE_{\mathsfup{#1}}} % expected value wrt X
  \newcommand{\pEy}[0]   {\pEx[y]} % expected value wrt Y
