--- a/common/sty/physics.sty
+++ b/common/sty/physics.sty
@@ -11,9 +11,10 @@
 %--------------------------------------
 % Electromagnetics
 %--------------------------------------
- \renewcommand{\H}        [0]{{\mathbf{H}}}
- \newcommand  {\D}        [0]{{\mathbf{D}}}   
- \newcommand  {\emB}        [0]{{\mathbf{B}}} % magnetic flux density
+ \newcommand  {\emH}      [0]{{\mathbf{H}}}
+ \newcommand  {\emD}      [0]{{\mathbf{D}}}   
+ \newcommand  {\emB}      [0]{{\mathbf{B}}} % magnetic flux density
+ \newcommand  {\emE}      [0]{{\mathbf{E}}} % electric field
  \newcommand  {\J}        [0]{{\mathbf{J}}}
 % \newcommand  {\diver}    [1]{{\mathbf{\nabla\cdot#1}}}
 % \newcommand  {\diver}    [1]{{{\nabla\cdot#1}}}
@@ -26,14 +27,6 @@
 % \newcommand  {\laplacian}[1]{{\nabla^2 #1}}
  \newcommand  {\laplacian}[0]{{{\nabla}^{2}}}
  \newcommand  {\unit}     [1]{{\hat{\mathbf{#1}} }}
-
-%--------------------------------------
-% Vector space
-%--------------------------------------
-%20190903%\newcommand{\mCmm}[0]{{\C^{m\times m}}}
-%20190903%\newcommand{\mCnn}[0]{{\C^{n\times n}}}
-%20190903%\newcommand{\mCnm}[0]{{\C^{m\times n}}}
-%20190903%\newcommand{\mCmn}[0]{{\C^{m\times n}}}
 
 %--------------------------------------
 % Multipath
@@ -50,14 +43,9 @@
 %--------------------------------------
 \newcommand{\Rrate}[1]{{R_\mathsf{#1}}}  
 \newcommand{\Rratio}[1]{{\bar{R}_\mathsf{#1}}}
-  
 \newcommand{\Rsym}[0]{\Rrate{sig}}   % symbol rate    : symbols/second
 \newcommand{\Rsam}[0]{\Rrate{smp}}   % sampling rate  : samples/second
 \newcommand{\Rdata}[0]{\Rrate{data}} % data rate      : data bits/second
-
-%20190903%\newcommand{\rcode}[0]{\Rratio{code}}% coding ratio   : information bits/code bits
-%20190903%\newcommand{\rsym}[0]{\Rratio{sym}}  % symbol ratio   : 1/# signal waveforms
-%20190903%\newcommand{\rchan}[0]{\Rratio{chan}}  % channel ratio   : information bits/symbol
 
 %--------------------------------------
 % Filters
@@ -66,8 +54,6 @@
 \newcommand{\hht}{{\mathrm{h}_{\mathsf{t}}}}
 \newcommand{\hhc}{{\mathrm{h}_{\mathsf{c}}}}
 \newcommand{\hhr}{{\mathrm{h}_{\mathsf{r}}}}
-%\newcommand{\hhcmp}[0]{{\mathrm{h}}}
-%\newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
 
 %--------------------------------------
 % Functions and vectors
@@ -75,19 +61,11 @@
 \newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
 \newcommand{\delt}[1][t]{{{{\Delta{#1}}}}}
 \newcommand{\delf}[0]   {\delt[f]}
-%\newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
 \newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
 \newcommand{\sa}   [1][n] {\seq{a}{#1}}    % 
-%\newcommand{\sue}  [1][n] {\seq{\hat{u}}{#1}}    % 
 \newcommand{\sae}  [1][n] {\seq{\hat{a}}{#1}}    % 
 \newcommand{\Lg}  {\LT{g}}
 
-%--------------------------------------
-% Functionals
-%--------------------------------------
-%20190903% \newcommand{\flE}  [0]{\opX [E]    }
-%20190903% \newcommand{\flEb} [1]{\opXb{E}{#1}}
-        
 %--------------------------------------
 % operators
 %--------------------------------------
@@ -114,7 +92,6 @@
 %--------------------------------------
 % Picture boxes
 %--------------------------------------
-%\begin{fsK}
 \setlength{\unitlength}{0.15mm}
 
 \newbox{\picSampler}
@@ -181,13 +158,9 @@
   \put(  50,  30){\vector  (   0, -1)   {20}           }
 }
 
-
-
-
-%
-%%--------------------------------------
-%% Picture boxes
-%%--------------------------------------
+%--------------------------------------
+% Picture boxes
+%--------------------------------------
 %%\begin{fsK}
 %\setlength{\unitlength}{0.15mm}
 %
