--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -127,6 +127,7 @@
 \newboolean{setstrct}
 \newboolean{spectral}
 \newboolean{spline}
+\newboolean{src}
 \newboolean{stats}
 \newboolean{subspace}
 \newboolean{sums}
