sunspot auto-correlation function

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -1782,6 +1782,17 @@
   url          = {http://www.sidc.be/silso/datafiles},
   }
 
+@article{wdcsilo_sunspot2021may,
+  author       = {{SILSO World Data Center}},
+  address      = {Royal Observatory of Belgium, avenue Circulaire 3, 1180 Brussels, Belgium},
+  title        = {The International Sunspot Number},
+  journal      = {International Sunspot Number Monthly Bulletin and online catalogue},
+  year         = {2019},
+  url          = {http://www.sidc.be/silso/datafiles},
+  note         = {\url{http://www.sidc.be/silso/DATA/SN_m_tot_V2.0.txt}},
+  accessed     = {2021 May 22 Saturday},
+  }
+
 @article{welch1967,
   title        = {The use of fast Fourier transform for the estimation of power spectra: A method based on time averaging over short, modified periodograms},
   author       = {P. Welch},
